# clms-aoi

./: .gitignore  README.md  pyproject.toml  requirements.txt
clms_aoi/: __init__.py  analysis.py  aoi.py  auth.py  cli.py  config.py  exceptions.py  outputs.py
clms_aoi/products/: __init__.py  base.py  dynamic_land_cover.py  forest_type.py  tree_cover.py
config/: config.yaml
notebooks/: test_auth.ipynb
tests/: test_aoi.py  test_auth.py  test_outputs.py
